# velvet-penguin-lantern

./: .gitignore  NEWSSCRAPPER_WINDOWS_GUIDE.md  README.md  SIGNALROOM_GUIDE.md  UI_THEME_IDENTITY_REMEDIATION_PROMPT.md  package-lock.json  package.json  requirements.txt  stuff.md  vite.config.ts
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  scrapy.cfg
backend/model_weights/all-MiniLM-L6-v2/: .gitignore
backend/profiles/: broadcast.json  default.json
backend/scripts/: __init__.py  download_models.py  train_gatekeeper.py  warm_models.py
backend/signalroom/: __init__.py  api.py  app.py  branding.py  config.py  json_storage.py  models.py  profiles.py  security.py  storage.py
backend/signalroom/crawlers/: __init__.py  extractors.py  items.py  policies.py  settings.py
backend/signalroom/crawlers/spiders/: __init__.py  (+1 more)
backend/signalroom/ml/: __init__.py  clustering.py  embeddings.py  gatekeeper.py  summarizer.py  training.py
backend/signalroom/services/: __init__.py  access.py  analytics.py  briefing.py  classification.py  crawl_runner.py  exports.py  gatekeeper_audit.py  normalization.py  pipeline.py  scheduler.py  source_configuration.py
backend/sites/: broadcast_sites.json  sites.json
backend/tests/: __init__.py  test_analytics.py  test_api.py  test_crawl_runner.py  test_crawler.py  test_download_models.py  test_exports.py  test_gatekeeper_audit.py  test_json_storage.py  test_ml.py  test_pipeline.py  test_security.py  test_services.py  test_storage.py
backend/tests/fixtures/: article.html  atom_feed.xml  listing.html
(+103 files in other folders)
