[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalroom-backend"
version = "0.1.0"
description = "Profile-aware news crawling, clustering, summarization, and editorial workflow API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "apscheduler>=3.10,<4",
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
  "python-docx>=1.1,<2",
  "python-dateutil>=2.9,<3",
  "python-pptx>=0.6.23,<2",
  "scrapy>=2.11,<3",
  "scikit-learn>=1.4",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.30,<1",
  "xlsxwriter>=3.2,<4",
]

[project.optional-dependencies]
ml = [
  "huggingface-hub>=0.34,<2",
  "sentence-transformers>=3.0,<6",
  "torch>=2.6,<3",
  "transformers>=4.44,<5",
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["signalroom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
